
@startuml
!define Table(name,desc) class name as "desc" << (T,#FFAAAA) >>
!define primary_key(x) <u>x</u>
hide methods
hide stereotypes

Table(User, "Пользователь") {
  primary_key(id): UUID
  name: String
  role_id: UUID
  inn: String
  phone: String
  person_type_id: UUID
  user_bank_id: UUID
  user_account_number: String
}

Table(Role, "Роль в системе(user / admin)") {
  primary_key(id): UUID
  name: String
}

Table(Transaction, "Финансовая операция") {
  primary_key(id): UUID
  created_by_user_id: UUID
  transaction_type_id: UUID
  actor_user_id: UUID
    amount: BigDecimal
  status_id: UUID
  recipient_id: UUID
  bank_from_id: UUID
  transaction_account: String
  timestamp: DateTime
  comment: String
}

Table(Recipient, "Контрагент") {
  primary_key(id): UUID
  inn: String
  phone: String
  account_number: String
  bank_id: UUID
  category_id: UUID
}

Table(Bank, "Банк") {
  primary_key(id): UUID
  name: String
  bic: String
  account_number: String
}

Table(Category, "Категория") {
  primary_key(id): UUID
  name: String
  description: String
}

Table(Status, "Статус транзакции") {
  primary_key(id): UUID
  name: String
}

Table(PersonType, "Тип лица") {
  primary_key(id): UUID
  name: String
}

Table(TransactionType, "Тип транзакции") {
  primary_key(id): UUID
  name: String
}

' RELATIONSHIPS
User }o--|| Role : "роль"
User }o--|| Bank : "банк пользователя"
User }o--|| PersonType : "тип лица"
User ||--o{ Transaction : "создаёт"
Transaction }o--|| User : "Пользователь"
Transaction }o--|| TransactionType : "тип"
Transaction }o--|| Status : "статус"
Transaction }o--|| Recipient : "контрагент"
Recipient }o--|| Bank : "банк контрагента"
Recipient }o--|| Category : "категория"
@enduml
